--- a/app/src/main/res/layout/classroom_item_selected_dialog.xml
+++ b/app/src/main/res/layout/classroom_item_selected_dialog.xml
@@ -163,13 +163,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/classroom_time_current_time"/>
 
-        <TextView
+        <Button
             android:id="@+id/send_message_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Send a Message"
             android:layout_marginStart="10dp"
+            android:textAllCaps="false"
             android:textColor="@color/black"
+            android:background="@drawable/background_profile_buttons"
+            style="?android:listSeparatorTextViewStyle"
             android:fontFamily="@font/work_sans"
             app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toEndOf="@id/send_message_img"
